# fprint

./: CMakeLists.txt  README.md  README.txt  a.out  cadastrar_digital.c  doc.txt  metodos.c
libfprint-0.7.0/: .buildconfig  ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  database.c  digital.txt  digital2.txt  libfprint.pc  libtool  ret.txt
libfprint-0.7.0/autom4te.cache/: output.0  requests  traces.0  traces.1
libfprint-0.7.0/doc/: Makefile  Makefile.in
libfprint-0.7.0/examples/: Makefile  Makefile.am  Makefile.in  cadastro.c  cadastro.h  client.c  client.h  cpp-test  curl_utils.c  curl_utils.h  device_utils.c  device_utils.h  digital.txt  enroll  enroll.c  enrolled.pgm  example.html  finger.pgm  img_capture  img_capture.c  main  main.c  ponto.c  ponto.h  remote_database.c  remote_database.h  resp.txt  server.c  server.h  user.c  user.h  users.txt  utils.c  utils.h  verify  verify_live  verify_live.c  ws.c
libfprint-0.7.0/libfprint/: Makefile  Makefile.in  async.c  core.c  data.c  fp_internal.h  fprint-list-udev-rules  fprint.h  libfprint.la  libfprint_la-aeslib.lo  libfprint_la-assembling.lo  libfprint_la-async.lo  libfprint_la-core.lo  libfprint_la-data.lo  libfprint_la-drv.lo  libfprint_la-img.lo  libfprint_la-imgdev.lo  libfprint_la-pixman.lo  libfprint_la-poll.lo  libfprint_la-sync.lo  (+2 more)
ponto-alpha/server/: CMakeLists.txt  a.out  cadastro.c  curl_utils.c  device_utils.c  device_utils.h  ponto.c  remote_database.c  remote_database.h  structs.h  user.c  user.h  utils.c  utils.h  utils.h.gch  verify_live.c  ws.c  ws_utils.c
(+137 files in other folders)
